<?xml version="1.0"?>
<package format="2">
    <name>coat_mpc</name>
    <version>0.0.0</version>
    <description>Package for MPC autotuner</description>
    <maintainer email="agassol@ethz.ch">Albert</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>coat_mpc_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>std_msgs</depend>
    <exec_depend>rospy</exec_depend>

</package>
